--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.4",
     "axios": "^1.13.2",
-    "ethers": "^5.7.2",
+    "ethers": "^5.8.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-hot-toast": "^2.6.0"
   }
 }
