--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "astro": "^5.16.4",
     "axios": "^1.13.2",
     "ethers": "^5.8.0",
+    "http-proxy-middleware": "^3.0.5",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0"
+  },
+  "devDependencies": {
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
