sub wallet clear and loading

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/react": "^4.4.2",
+    "@scure/bip32": "^2.0.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.4",
     "axios": "^1.13.2",
+    "bip39": "^3.1.0",
     "crypto-js": "^4.2.0",
     "ethers": "^5.8.0",
+    "graphql-request": "^7.4.0",
     "http-proxy-middleware": "^3.0.5",
     "lucide-react": "^0.556.0",
     "netlify": "^23.13.0",
