--- a/package.json
+++ b/package.json
@@ -17,16 +17,24 @@
     "astro": "^5.16.4",
     "axios": "^1.13.2",
     "bip39": "^3.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "ethers": "^5.8.0",
+    "ethers-v6": "npm:ethers@^6.16.0",
     "graphql-request": "^7.4.0",
+    "http-browserify": "^1.7.0",
     "http-proxy-middleware": "^3.0.5",
+    "https-browserify": "^1.0.0",
     "lucide-react": "^0.556.0",
     "netlify": "^23.13.0",
+    "process": "^0.11.10",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
-    "update": "^0.7.4"
+    "stream-browserify": "^3.0.0",
+    "update": "^0.7.4",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "vite-plugin-commonjs": "^0.10.4",
