--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/netlify": "^6.6.3",
     "@astrojs/react": "^4.4.2",
     "@scure/bip32": "^2.0.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.4",
@@ -37,6 +38,9 @@
     "url": "^0.11.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite-plugin-commonjs": "^0.10.4",
     "vite-plugin-node-polyfills": "^0.24.0"
   }
